--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>freeCodeCamp HTML5 and CSS</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
-test
+  <h2 class="red-text">CatPhotoApp</h2>
+
+  <p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+  <p class="red-text">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+
 </body>
 </html>
