--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
   <h2 class="red-text">CatPhotoApp</h2>
 
   <p>Click here for more <a href="http://www.freecatphotoapp.com">cat photos</a>. </p>
-  <img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. ">
+  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. "></a>
 
-  <p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
-  <p class="red-text">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+  <p class="red-text">Things cats love:</p>
+  <ul>
+    <li>boxes</li>
+    <li>sleep</li>
+    <li>making videos</li>
+  </ul>
+  <p class="red-text">Things cats hate:</p>
+    <ol>
+      <li>dogs</li>
+      <li>taking baths</li>
+      <li>flea treatment</li>
+    </ol>
 
 </body>
 </html>
