--- a/index.html
+++ b/index.html
@@ -29,5 +29,15 @@
       <li>flea treatment</li>
     </ol>
 
+  <form action="/submit-cat-photo">
+    <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
+    <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+    <label><input type="checkbox" name="personality"> Lazy</label>
+    <label><input type="checkbox" name="personality"> Curious</label>
+    <label><input type="checkbox" name="personality"> Loving</label>
+    <input type="text" placeholder="cat photo URL" required>
+    <button type="submit">Submit</button>
+  </form>
+
 </body>
 </html>
