--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <p>Click here for more <a href="http://www.freecatphotoapp.com">cat photos</a>. </p>
   <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. "></a>
 
+  <div class="silver-background">
   <p class="red-text">Things cats love:</p>
   <ul>
     <li>boxes</li>
@@ -28,8 +29,9 @@
       <li>taking baths</li>
       <li>flea treatment</li>
     </ol>
+  </div>
 
-  <form action="/submit-cat-photo">
+  <form action="/submit-cat-photo" id="cat-photo-form">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
     <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
     <label><input type="checkbox" name="personality"> Lazy</label>
