--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <title>freeCodeCamp HTML5 and CSS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" type="text/css">
-    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
   <div class="container-fluid">
@@ -24,9 +24,17 @@
   <img src="https://bit.ly/fcc-running-cats"
        class="img-responsive"
        alt="three kittens running towards screen.">
-
-  <button class="btn btn-block btn-primary">Like</button>
-
+  <div class="row">
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-primary">Like</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-info">Info</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-danger">Delete</button>
+    </div>
+  </div>
   <div class="silver-background">
   <p class="red-text">Things cats love:</p>
   <ul>
