--- a/index.html
+++ b/index.html
@@ -9,56 +9,76 @@
     <title>freeCodeCamp HTML5 and CSS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
   <div class="container-fluid">
-  <h2 class="red-text text-center">CatPhotoApp</h2>
-
-  <p>Click here for more <a href="http://www.freecatphotoapp.com">cat photos</a>. </p>
-  <a href="#">
-    <img src="https://bit.ly/fcc-relaxing-cat"
-         class="smaller-image thick-green-border"
-         alt="A cute orange cat lying on its back.">
-  </a>
-  <img src="https://bit.ly/fcc-running-cats"
+    <div class="row">
+      <div class="col-xs-8">
+        <h2 class="text-primary text-center">CatPhotoApp</h2>
+      </div>
+      <div class="col-xs-4">
+        <a href="#">
+          <img src="https://bit.ly/fcc-relaxing-cat"
+               class="img-responsive thick-green-border"
+               alt="A cute orange cat lying on its back.">
+        </a>
+      </div>
+    </div>
+    <img src="https://bit.ly/fcc-running-cats"
        class="img-responsive"
        alt="three kittens running towards screen.">
-  <div class="row">
-    <div class="col-xs-4">
-      <button class="btn btn-block btn-primary">Like</button>
+    <div class="row">
+      <div class="col-xs-4">
+       <button class="btn btn-block btn-primary">
+         <i class="fa fa-thumbs-up"></i> Like</button>
+      </div>
+      <div class="col-xs-4">
+        <button class="btn btn-block btn-info">
+          <i class="fa fa-info-circle"></i> Info</button>
+      </div>
+      <div class="col-xs-4">
+        <button class="btn btn-block btn-danger">
+          <i class="fa fa-trash"></i> Delete</button>
+      </div>
     </div>
-    <div class="col-xs-4">
-      <button class="btn btn-block btn-info">Info</button>
+    <div class="silver-background">
+      <p class="red-text">Things cats <span class="text-danger">love:</span></p>
+    <ul>
+      <li>boxes</li>
+      <li>sleep</li>
+      <li>making videos</li>
+    </ul>
+    <p class="red-text">Things cats hate:</p>
+      <ol>
+        <li>dogs</li>
+        <li>taking baths</li>
+        <li>flea treatment</li>
+      </ol>
     </div>
-    <div class="col-xs-4">
-      <button class="btn btn-block btn-danger">Delete</button>
+    <div class="row">
+      <form action="/submit-cat-photo" id="cat-photo-form">
+        <div class="col-xs-6">
+          <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
+        </div>
+        <div class="col-xs-6">
+          <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+        </div>
+        <div class="col-xs-4">
+          <label><input type="checkbox" name="personality"> Lazy</label>
+        </div>
+        <div class="col-xs-4">
+          <label><input type="checkbox" name="personality"> Curious</label>
+        </div>
+        <div class="col-xs-4">
+          <label><input type="checkbox" name="personality"> Loving</label>
+        </div>
+        <input type="text" class="form-control" placeholder="cat photo URL" required>
+        <button type="submit" class="btn btn-primary">
+          <i class="fa fa-paper-plane"></i> Submit</button>
+      </form>
     </div>
-  </div>
-  <div class="silver-background">
-  <p class="red-text">Things cats love:</p>
-  <ul>
-    <li>boxes</li>
-    <li>sleep</li>
-    <li>making videos</li>
-  </ul>
-  <p class="red-text">Things cats hate:</p>
-    <ol>
-      <li>dogs</li>
-      <li>taking baths</li>
-      <li>flea treatment</li>
-    </ol>
-  </div>
-
-  <form action="/submit-cat-photo" id="cat-photo-form">
-    <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
-    <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
-    <label><input type="checkbox" name="personality"> Lazy</label>
-    <label><input type="checkbox" name="personality"> Curious</label>
-    <label><input type="checkbox" name="personality"> Loving</label>
-    <input type="text" placeholder="cat photo URL" required>
-    <button type="submit">Submit</button>
-  </form>
   </div>
 </body>
 </html>
