jquery target elements

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -10,31 +10,44 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="styles/animate.css">
     <!--<link rel="stylesheet" href="styles/styles.css">-->
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
   </head>
   <!--Only change code above this line.-->
   <body>
-    <div class="container-fluid">
-      <h3 class="text-primary text-center">jQuery Playground</h3>
-      <div class="row">
-        <div class="col-xs-6">
-          <h4>#left-well</h4>
-            <div class="well" id="left-well">
-              <button class="btn btn-default target" id="target1">#target1</button>
-              <button class="btn btn-default target" id="target2">#target2</button>
-              <button class="btn btn-default target" id="target3">#target3</button>
-            </div>
-        </div>
-        <div class="col-xs-6">
-          <h4>#right-well</h4>
-            <div class="well" id="right-well">
-              <button class="btn btn-default target" id="target4">#target4</button>
-              <button class="btn btn-default target" id="target5">#target5</button>
-              <button class="btn btn-default target" id="target6">#target6</button>
-            </div>
+    <script>
+      $(document).ready(function() {
+        $('button').addClass('animated bounce');
+        $('.well').addClass('animated shake');
+        $('#target3').addClass('animated fade');
+      });
+    </script>
+      <div class="container-fluid">
+        <h3 class="text-primary text-center">jQuery Playground</h3>
+        <div class="row">
+          <div class="col-xs-6">
+            <h4>#left-well</h4>
+              <div class="well" id="left-well">
+                <button class="btn btn-default target" id="target1">#target1</button>
+                <button class="btn btn-default target" id="target2">#target2</button>
+                <button class="btn btn-default target" id="target3">#target3</button>
+              </div>
+          </div>
+          <div class="col-xs-6">
+            <h4>#right-well</h4>
+              <div class="well" id="right-well">
+                <button class="btn btn-default target" id="target4">#target4</button>
+                <button class="btn btn-default target" id="target5">#target5</button>
+                <button class="btn btn-default target" id="target6">#target6</button>
+              </div>
+          </div>
         </div>
       </div>
-    </div>
 
   </body>
 </html>
