jquery multiple selectors and remove class

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -22,9 +22,10 @@
   <body>
     <script>
       $(document).ready(function() {
-        $('button').addClass('animated bounce');
-        $('.well').addClass('animated shake');
-        $('#target3').addClass('animated fade');
+        $('button').addClass('animated');
+        $('button').removeClass('btn-default');
+        $('.btn').addClass('shake');
+        $('#target1').addClass('btn-primary');
       });
     </script>
       <div class="container-fluid">
