jquery change css

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -22,10 +22,7 @@
   <body>
     <script>
       $(document).ready(function() {
-        $('button').addClass('animated');
-        $('button').removeClass('btn-default');
-        $('.btn').addClass('shake');
-        $('#target1').addClass('btn-primary');
+        $('#target1').css('color', 'red');
       });
     </script>
       <div class="container-fluid">
