jquery disable element

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -23,6 +23,7 @@
     <script>
       $(document).ready(function() {
         $('#target1').css('color', 'red');
+        $('#target2').prop('disabled', true);
       });
     </script>
       <div class="container-fluid">
