jquery html change text remove element

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -24,6 +24,8 @@
       $(document).ready(function() {
         $('#target1').css('color', 'red');
         $('#target2').prop('disabled', true);
+        $('#target4').html('<em>#target4</em>');
+        $('#target3').remove();
       });
     </script>
       <div class="container-fluid">
