jquery appendto and clone

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -26,6 +26,7 @@
         $('#target2').prop('disabled', true);
         $('#target4').html('<em>#target4</em>');
         $('#target3').remove();
+        $('#target4').clone().appendTo('#left-well');
       });
     </script>
       <div class="container-fluid">
