jquery target parent

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -27,6 +27,7 @@
         $('#target4').html('<em>#target4</em>');
         $('#target3').remove();
         $('#target4').clone().appendTo('#left-well');
+        $('#target1').parent().css('background-color', '#808080');
       });
     </script>
       <div class="container-fluid">
