jquery target children, specific child, modify body

--- a/jquery-playground.html
+++ b/jquery-playground.html
@@ -28,6 +28,10 @@
         $('#target3').remove();
         $('#target4').clone().appendTo('#left-well');
         $('#target1').parent().css('background-color', '#808080');
+        $('#right-well').children().css('color', '#707030');
+        $('.target:nth-child(3)').addClass('animated bounce');
+        $('.target:odd').addClass('animated shake');
+        $('body').addClass('animated hinge');
       });
     </script>
       <div class="container-fluid">
